Added namcespace for module as "Module"

--- a/XoopsEngine/htdocs/themes/legacy/theme.html
+++ b/XoopsEngine/htdocs/themes/legacy/theme.html
@@ -44,6 +44,15 @@
 </table>
 <!-- End header -->
 
+<!-- Load navigation -->
+<{navigation assign=navigation}>
+
+<{if $navigation}>
+    <{include file="navigation.html"}>
+<{/if}>
+<{*include file="navigation.html" navigation=$navigation*}>
+<!-- End header -->
+
 <table cellspacing="0">
     <tr>
         <!-- Start left blocks loop -->
